--- a/styles/header.css
+++ b/styles/header.css
@@ -8,6 +8,7 @@
     top:0;
     left:0;
     right:0;
+    z-index:100;
 
     background-color: white;
     border-bottom-width: 1px;
@@ -62,6 +63,7 @@
     
 
 }
+
 .search-button{
     height:40px;
     width:66px;
@@ -71,11 +73,53 @@
     border-color:rgb(192,192,192);
     margin-left:-1px;
     margin-right:10px;
+    
 
+}
+.search-button,
+.voice-search-button,
+.upload-icon-container,
+.youtube-apps-icon-container,
+.notifications-icon-container{
+    display:flex;
+    justify-content: center;
+    align-items:center;
+    position:relative;
+}
+
+
+.search-button .tooltip,
+.voice-search-button .tooltip,
+.upload-icon-container .tooltip,
+.youtube-apps-icon-container  .tooltip,
+.notifications-icon-container  .tooltip{
+    font-family:Roboto,Arial;
+    position:absolute;
+    background-color: gray;
+    color:white;
+    padding-top:4px;
+    padding-bottom:4px;
+    padding-left:8px;
+    padding-right:8px;
+    border-radius:2px;
+    font-size:12px;
+    bottom:-30px;
+    opacity:0;
+    transition:opacity 0.15s;
+    pointer-events:none;
+    white-space: nowrap;
+}
+
+.search-button:hover  .tooltip,
+.voice-search-button:hover .tooltip,
+.upload-icon-container:hover   .tooltip,
+.youtube-apps-icon-container:hover  .tooltip,
+.notifications-icon-container:hover   .tooltip{
+    opacity:1;
 }
 .search-icon{
     height:25px;
-    margin-top:4px;
+    
 }
 .voice-search-button{
     height:40px;
@@ -87,7 +131,7 @@
 }
 .voice-search-icon{
     height:24px;
-    margin-top:4px;
+    
     
 }
 
@@ -111,6 +155,25 @@
 
 .notifications-icon{
    height:24px; 
+}
+.notifications-icon-container{
+    position:relative
+}
+.notifications-count{
+    position:absolute;
+    top:-2px;
+    right:-5px;
+    background-color:rgb(200,0,0);
+    color:white;
+    font-family:Roboto,Arial;
+    font-size:11px;
+    padding-left:5px;
+    padding-right:5px;
+    padding-top:2px;
+    padding-bottom:2px;
+    border-radius:10px;
+
+
 }
 
 .current-user-picture{
